app/src-tauri/test_error_v2.txt
warning: variable does not need to be mutable
   --> src\sync.rs:180:9
    |
180 |     let mut guard = SYNC_MANAGER.lock().map_err(|e| e.to_string())?;
    |         ----^^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

   Compiling screen-inu v0.2.6 (D:\OtherProject\mine\screen_inu\app\src-tauri)
warning: `screen-inu` (lib) generated 1 warning (run `cargo fix --lib -p screen-inu` to apply 1 suggestion)
error[E0432]: unresolved import `tempfile`
   --> src\sync.rs:191:9
    |
191 |     use tempfile::tempdir;
    |         ^^^^^^^^ use of unresolved module or unlinked crate `tempfile`
    |
    = help: if you wanted to use a crate named `tempfile`, use `cargo add tempfile` to add it to your `Cargo.toml`

For more information about this error, try `rustc --explain E0432`.
warning: `screen-inu` (lib test) generated 1 warning (1 duplicate)
error: could not compile `screen-inu` (lib test) due to 1 previous error; 1 warning emitted
